--- a/math/note04.ipynb
+++ b/math/note04.ipynb
@@ -86,141 +86,165 @@
    "source": [
     "### Vectors as Arrays of Numbers\n",
     "\n",
-    "We will define **vector**  as an ordered collection of numbers which describes states of physical systems. \n",
+    "A **vector** is an ordered collection of numbers that represents the state or configuration of a physical system.\n",
     "\n",
-    "  - $a = (-2, 8)$: A 2D vector.\n",
-    "  - $b = (1.34, 4.23, 5.98)$: A 3D vector.\n",
-    "  - $c = (1, -2, 4i, 3 + 2i)$: A 4D vector with complex components.\n",
-    "  - $f = (1, 2, 3, 4, 5, 6, \\ldots, \\infty)$: An infinite-dimensional vector with integer components.\n",
+    "* $a = (-2, 8)$ — a 2D vector\n",
+    "* $e_1$ = (1,0) - a unit vector along x axis and $e_2 = (0,1)$ a unit vector along y axis\n",
+    "* $b = (1.34, 4.23, 5.98)$ — a 3D vector\n",
+    "* $c = (1, -2, 4i, 3 + 2i)$ — a 4D vector with complex components\n",
+    "* $f = (1, 2, 3, 4, 5, 6, \\ldots)$ — an infinite-dimensional vector (e.g., a sequence)\n",
     "\n",
-    "- **Note**: Vectors can belong to real or complex spaces, depending on their components.\n",
+    "**Note:** Vectors may belong to *real* or *complex* vector spaces depending on the nature of their components.\n",
     "\n",
     "\n",
-    "### Vectors Defined with Respect to a Basis\n",
     "\n",
-    "- In classical physics, vectors are often visualized as arrows in space, with both **magnitude** and **direction**. A vector is typically defined with respect to a **basis**, where unit vectors ($\\vec{e_i}$) span the space. For instance, in 3D Euclidean space, the standard basis is:\n",
+    ":::{admonition} **Vector Space**\n",
+    ":class: tip\n",
     "\n",
-    "  $$e_1 = (1, 0, 0), \\,\\, e_2 = (0, 1, 0), \\,\\, e_3 = (0, 0, 1)$$\n",
-    "\n",
-    "- Here is an example of vector $v$ in terms of unit vectors of euclidean space.\n",
-    "\n",
-    "  $$v = (2,3,4) = 2e_1+3e_2+4e_3$$\n",
-    "\n",
-    "- In a different coordinate system or basis, the same vector will have different components, but its intrinsic properties remain unchanged. This flexibility in representation is a fundamental concept in quantum mechanics and linear algebra.\n",
-    "\n",
-    "### Row vectors vs column vector\n",
-    "\n",
-    "- We will defined row and column vectors which are related to one another by operation of transpose. They describe the same physical state or coordinate of a system.\n",
+    "* Any vector in an $N$-dimensional space can be written as a **linear combination** of $N$ linearly independent basis vectors.\n",
+    "* For instance, in 2D space, we can choose two perpendicular unit vectors $e_1$ and $e_2$ to form a convenient basis:\n",
     "\n",
     "$$\n",
-    "\\begin{pmatrix} a_1 \\\\ a_2 \\end{pmatrix} = (a_1, a_2)^{T}\n",
-    "$$\n",
-    "\n",
-    "- However row vectors live with their own universe of row vectors and column vectors in their own universe of column vectors.\n",
-    "\n",
-    "- Later we will see that to take scalar or dot product row vector needs to be hit with column and vice versa.\n",
-    "\n",
-    "### Example: Vector expressed in two different basis\n",
-    "\n",
-    "Let’s take a 2D vector $\\mathbf{v}$ in the standard Cartesian unit basis:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{v} = \\begin{pmatrix} 2 \\\\ 3 \\end{pmatrix}\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{v} = 2 \\mathbf{e_1} + 3 \\mathbf{e_2} = 2\\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix}+3\\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}\n",
+    "\\vec{a} = a_1 e_1 + a_2 e_2 = \\begin{pmatrix}\n",
+    "    a_1\\\\\n",
+    "    a_2\\\\\n",
+    "    \\end{pmatrix}\n",
     "$$\n",
     "\n",
     "\n",
-    "Now, suppose we switch to a new basis, where each new basis vector is a scalar multiple of the standard basis vectors. Let’s define the new basis vectors as:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{b_1} = 2 \\mathbf{e_1} = \\begin{pmatrix} 2 \\\\ 0 \\end{pmatrix}, \\quad \\mathbf{b_2} = 2 \\mathbf{e_2} = \\begin{pmatrix} 0 \\\\ 2 \\end{pmatrix}\n",
-    "$$\n",
-    "\n",
-    "in the new basis, the vector $\\mathbf{v}$ is represented as:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{v}_{\\text{new}} = 1 \\mathbf{b_1} + 3/2 \\mathbf{b_2}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{v}_{\\text{new}} = \\begin{pmatrix} 1 \\\\ \\frac{3}{2} \\end{pmatrix}\n",
+    "$$a= \\begin{pmatrix}\n",
+    "    2\\\\\n",
+    "    3\\\\\n",
+    "    \\end{pmatrix} = 2\\begin{pmatrix}\n",
+    "    1\\\\\n",
+    "    0\\\\\n",
+    "    \\end{pmatrix}+3 \\begin{pmatrix}\n",
+    "    0\\\\\n",
+    "    1\\\\\n",
+    "    \\end{pmatrix}\n",
     "$$\n",
     "\n",
+    "* If we choose a rotated basis $e'_1$, $e'_2$ (e.g choose basis vectors with length 2), the components change, but the **vector itself remains the same**:\n",
     "\n",
-    "- This shows that when moving to a new basis the components of the vector change accordingly, but the vector itself remains the same geometrically!\n",
+    "$$\n",
+    "\\vec{a} = a'_1 e'_1 + a'_2 e'_2 = (a'_1, a'_2)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$a= \\begin{pmatrix}\n",
+    "    2\\\\\n",
+    "    3\\\\\n",
+    "    \\end{pmatrix} = 1\\begin{pmatrix}\n",
+    "    2\\\\\n",
+    "    0\\\\\n",
+    "    \\end{pmatrix}+\\frac{3}{2} \\begin{pmatrix}\n",
+    "    0\\\\\n",
+    "    2\\\\\n",
+    "    \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    ":::\n",
     "\n",
     "\n",
     "\n",
-    "### Vector Notation\n",
+    "### Row and Column Vectors\n",
     "\n",
-    "Depending on the context, we may emphasize the basis or omit it when the basis is implied:\n",
+    "- In linear algebra and quantum mechanics, we distinguish between **column vectors** (kets) and **row vectors** (bras), which are related by the **transpose** (and, in complex spaces, by the **Hermitian conjugate**):\n",
     "\n",
-    "  - In terms of a coordinate basis:  \n",
+    "$$\n",
+    "\\langle a | =\n",
+    "\\begin{pmatrix}\n",
+    "a_1 \\\n",
+    "a_2\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
     "\n",
-    "    $$\\vec{a} = 2\\vec{e_i} + 3\\vec{e_j}$$\n",
+    "$$\n",
+    "|b\\rangle =  \\begin{pmatrix}\n",
+    "    b_1\\\\\n",
+    "    b_2\\\\\n",
+    "    \\end{pmatrix}\n",
+    "$$\n",
     "\n",
-    "  - As an ordered tuple of components:  \n",
-    "\n",
-    "    $$a = (2, 3)$$\n",
-    "\n",
-    "  - Using Dirac notation (common in quantum mechanics):  \n",
-    "  \n",
-    "    $$\\mid a \\rangle = 2 \\mid e_i \\rangle + 3 \\mid e_j \\rangle$$\n",
-    "\n",
-    "- Vectors can represent a wide range of phenomena, such as the position of a particle in space, the population of countries, or temperature variations in different regions of a forest."
+    "- Although they describe the same state or object, bras and kets “live” in dual spaces — column vectors form one space, while row vectors belong to its dual space. Their interaction through the inner product $\\langle b | a \\rangle$ gives a scalar quantity.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vector Operations\n",
+    "###  Inner products and orthogonality\n",
     "\n",
-    "What defines vectors in a mathematical framework are the operations performed on them. Let’s illustrate these operations using a simple 2D vectors $a = (3, 2)$ and $b=(1,1)$ as an example. \n",
+    "- **Dot product  $\\langle a\\mid b \\rangle$** quantifies the projection of vector $a$ on $b$ and vice-versa. That is, how much $a$ and $b$ have in common in terms of direction in space!  \n",
     "\n",
-    "#### 1. Addition or Subtraction\n",
     "\n",
-    "- **Component-wise addition**:\n",
+    ":::{admonition} **Dot product: geometric definition**\n",
+    ":class: important\n",
     "\n",
-    "  $$a + b = \\begin{pmatrix}\n",
-    "    2\\\\\n",
-    "    3\n",
-    "  \\end{pmatrix} + \\begin{pmatrix}\n",
+    "$$\n",
+    "\\langle a\\mid b \\rangle = |a| |b| cos\\theta\n",
+    "$$\n",
+    ":::\n",
+    "\n",
+    "\n",
+    "- The $\\theta$ measures angle between a and b. If vectors are perpendicular like unit vectors in cartesian system we call them **orthogonal** \n",
+    "\n",
+    "- **Orthonormal vectors** are both normalized and orthogonal.  We denote orthornamilty condition with the convenient Kornecker symbol: $\\delta_{ij}=0$  when $i\\neq j$ and $1$ when $i=j$. \t\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\langle e_i \\mid e_j \\rangle =\\delta_{ij}\n",
+    "$$  \n",
+    "\n",
+    "$$\n",
+    "  (1,0)\\begin{pmatrix}\n",
+    "    0\\\\\n",
     "    1\\\\\n",
-    "    1\n",
-    "  \\end{pmatrix} = \\begin{pmatrix}\n",
-    "    2+1\\\\\n",
-    "    3+1\n",
-    "  \\end{pmatrix} = \\begin{pmatrix}\n",
-    "    3\\\\\n",
-    "    4\n",
-    "  \\end{pmatrix}$$\n",
+    "    \\end{pmatrix}=1\\cdot 0+0\\cdot 1=0\n",
+    "$$\n",
     "\n",
-    "- **In Dirac notation**:\n",
+    "- **Norm of a vector $\\mid a\\mid$** Is project of the vector onto itself and quantifies the length of the vector. When the norm is $\\mid a \\mid=1$, we say that the vector is normalized.\n",
+    "\t\n",
+    "$$\n",
+    "\\langle a \\mid a\\rangle= \\big(a_1\\langle e_1| + a_2 \\langle e_2|\\big) \\cdot \\big (a_1 |e_1\\rangle + a_2 |e_2 \\rangle \\big ) = a_1^2+a_2^2\n",
+    "$$\n",
+    "\t\n",
+    "$$\n",
+    "\\mid a \\mid =\\sqrt{a_1^2+a_2^2}\n",
+    "$$\n",
     "\n",
-    "  $$|a \\rangle + |b \\rangle = (2 + 1)\\mid e_1 \\rangle + (3 + 1)\\mid e_2 \\rangle$$\n",
     "\n",
-    "#### 2. Multiplication by a Scalar\n",
+    ":::{admonition} **Inner product between two vectors**\n",
+    ":class: important\n",
     "\n",
-    "Multiplying a vector by a scalar $\\beta=10$ scales the vector's magnitude without changing its direction. \n",
+    "$$\\vec{a} \\cdot \\vec{b} = \\langle a| b \\rangle = a_1 b_1+ a_2b_2+ ... $$\n",
     "\n",
-    "- **Component-wise scalar multiplication**:\n",
+    ":::\n",
     "\n",
-    "  $$10\\cdot a = 10 \\begin{pmatrix}\n",
-    "    2\\\\\n",
-    "    3\n",
-    "  \\end{pmatrix} = \\begin{pmatrix}\n",
-    "    20\\\\\n",
-    "    30\n",
-    "  \\end{pmatrix}$$\n",
     "\n",
-    "- **In Dirac notation**:\n",
+    ":::{admonition} **Use inner product to defiine components**\n",
+    ":class: important\n",
     "\n",
-    "  $$10\\mid a \\rangle = 20 \\mid e_1 \\rangle + 30 \\mid e_2 \\rangle$$"
+    "$$\\vec{a_1} = a_1 e_1 + a_2 \\vec{e}_2+ ...$$\n",
+    "\n",
+    "\n",
+    "$$\\vec{e_1} \\cdot \\vec{a} = a_1$$\n",
+    "\n",
+    "$$\\langle e_1 | a_1\\rangle  = a_1$$\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "### Decomposition of functions into orthogonal components\n",
+    "\n",
+    "- Writing a vector in terms of its orthogonal unit vectors is a powerful mathematical technique which permeates much of quantum mechanics. The role of finite dimensional vectors in QM play the  infinite dimensional functions. In analogy with sequence vectors which can live in 2D, 3D or ND spaces, the inifinite dimensional space of functions in quantum mathematics is known as a **Hilbert space**, named after famous mathematician David Hilbert. We will not go too much in depth about functional spaces other than listing some powerful analogies with simple sequence vectors.   \n",
+    "\n",
+    "|    Vectors                 |    Functions                  |                         \n",
+    "| :----------------------------------------------------------: | :----------------------------------------------------------: |\n",
+    "| **Orthonormality** $\\\\ \\langle x\\mid y \\rangle = \\sum^{i=N}_{i=1} x_i y_i=\\delta_{xy}$ | **Orthonormality** $\\\\ \\langle \\phi_i \\mid \\phi_j \\rangle = \\int^{+\\infty}_{-\\infty} \\phi_i(x) \\phi_j(x)dx=\\delta_{ij}$ |\n",
+    "| **Linear superposition**  $\\\\ \\mid A \\rangle = A_x \\mid x\\rangle+A_y\\mid y\\rangle$ | **Linear superposition** $\\\\ \\mid f\\rangle = c_1 \\mid\\phi_1\\rangle+c_2\\mid\\phi_2\\rangle$ |\n",
+    "| **Projections**  $\\\\ \\langle e_x\\mid A\\rangle=A_x \\langle x\\mid x \\rangle +A_y \\langle x\\mid y \\rangle=A_x  $ | **Projections** $\\\\ \\langle \\phi_1\\mid \\Psi\\rangle=c_1 \\langle \\Psi \\mid\\phi_1 \\rangle +c_2 \\langle \\Psi \\mid\\phi_2 \\rangle=c_1$ |\n",
+    "\n"
    ]
   },
   {
@@ -492,100 +516,6 @@
     "plt.suptitle(\"Linear Transformations of a Vector Set\", fontsize=14)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###  Inner products and orthogonality\n",
-    "\n",
-    "- **Dot product  $\\langle a\\mid b \\rangle$** quantifies the projection of vector $a$ on $b$ and vice-versa. That is, how much $a$ and $b$ have in common with each other in terms of direction in space.  \n",
-    "\n",
-    "$$\n",
-    "\\langle e_i \\mid e_j \\rangle =\\delta_{ij}\n",
-    "$$  \n",
-    "\n",
-    "- **Norm of a vector $\\mid a\\mid$** Is project of the vector onto itself and quantifies the length of the vector. When the norm is $\\mid a \\mid=1$, we say that the vector is normalized.\n",
-    "\t\n",
-    "$$\n",
-    "\\langle a \\mid a\\rangle= a_1^2+a_2^2\n",
-    "$$\n",
-    "\t\n",
-    "$$\n",
-    "\\mid a \\mid =\\sqrt{a_1^2+a_2^2}\n",
-    "$$\n",
-    "\n",
-    "- **Orthogonality** If the projection of vector $a$ on $b$ is zero we say that the vectors are orthogonal.  Example of the orthogonal vectors are unit vectors of cartesian coordinate system. \n",
-    "\n",
-    "$$\n",
-    "  (1,0)\\begin{pmatrix}\n",
-    "    0\\\\\n",
-    "    1\\\\\n",
-    "    \\end{pmatrix}=1\\cdot 0+0\\cdot 1=0\n",
-    "$$\n",
-    "\n",
-    "- **Orthonormal vectors** are both normalized and orthogonal.  We denote orthornamilty condition with the convenient Kornecker symbol: $\\delta_{ij}=0$  when $i\\neq j$ and $1$ when $i=j$. \t\n",
-    "\n",
-    " \n",
-    "> To normalize a vector is to divide the vector by its norm. $\\mid E_1\\rangle = (4,0,0,0)$ is not normalized since $\\langle E_1\\mid E_1\\rangle = 4$ hence we divide by norm and obtain a normalized vector $\\mid e_1\\rangle=\\frac{1}{4}\\mid E_1\\rangle=(1,0,0,0)$. And now $\\langle E_1 \\mid  E_1\\rangle=1$.\n",
-    "\n",
-    "\n",
-    "### Basis set and linear independence. \n",
-    "\n",
-    "**1. Every $N$-dimensional vector can be uniquely represented as a linear combination of $N$ orthogonal vectors.** And vice-versa: if a vector can be represented by $N$ orthogonal vectors, it means that the vector is $N$-dimensional. A set of vectors in terms of which an arbitrary $N$-dimensional vector is expressed is called a **basis set.**\n",
-    "\n",
-    "\n",
-    "$$\n",
-    "\\mid v\\rangle = \\sum^{i=N}_{i=1} \\mid e_i\\rangle\n",
-    "$$\n",
-    "\n",
-    "$$a= \\begin{pmatrix}\n",
-    "    2\\\\\n",
-    "    3\\\\\n",
-    "    \\end{pmatrix} = 2\\begin{pmatrix}\n",
-    "    1\\\\\n",
-    "    0\\\\\n",
-    "    \\end{pmatrix}+3 \\begin{pmatrix}\n",
-    "    0\\\\\n",
-    "    1\\\\\n",
-    "    \\end{pmatrix}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "$$a= \\begin{pmatrix}\n",
-    "    -1\\\\\n",
-    "    5\\\\ 8\\\\ \\end{pmatrix} = -1\\begin{pmatrix}\n",
-    "    1\\\\\n",
-    "    0\\\\ 0\\\\\n",
-    "    \\end{pmatrix}+5 \\begin{pmatrix}\n",
-    "    0\\\\\n",
-    "    1\\\\ 0\\\\\n",
-    "    \\end{pmatrix}+8 \\begin{pmatrix}\n",
-    "    0\\\\\n",
-    "    0\\\\ 1\\\\\n",
-    "    \\end{pmatrix}\n",
-    "$$\n",
-    "    \n",
-    "**2. Orthogonal vectors are linearly independent.** This means that no member of a set of vectors can be expressed in terms of the others.  Linear independence is exprsessed mathematically by having coefficients of the linear combination of 3D (4D, ND, etc) vectors to zero $\\alpha_1=\\alpha_2=\\alpha_3=0$ as the only way to satify zero vector equality: \n",
-    "\n",
-    "  $$\n",
-    "  \\alpha_1 \\mid e_1\\rangle +\\alpha_1 \\mid e_2\\rangle+\\alpha_3 \\mid e_3\\rangle=0\n",
-    "  $$   \n",
-    "\n",
-    "The converse, when one of the coefificent $\\alpha_i$can be non-zero immeaditely implies linear depenence,  because one can divide by that coeficient $\\alpha_i$ and express the unit vector $\\mid e_i\\rangle$ in terms of the others.\n",
-    "\n",
-    "### Decomposition of functions into orthogonal components\n",
-    "\n",
-    "- Writing a vector in terms of its orthogonal unit vectors is a powerful mathematical technique which permeates much of quantum mechanics. The role of finite dimensional vectors in QM play the  infinite dimensional functions. In analogy with sequence vectors which can live in 2D, 3D or ND spaces, the inifinite dimensional space of functions in quantum mathematics is known as a **Hilbert space**, named after famous mathematician David Hilbert. We will not go too much in depth about functional spaces other than listing some powerful analogies with simple sequence vectors.   \n",
-    "\n",
-    "|    Vectors                 |    Functions                  |                         \n",
-    "| :----------------------------------------------------------: | :----------------------------------------------------------: |\n",
-    "| **Orthonormality** $\\\\ \\langle x\\mid y \\rangle = \\sum^{i=N}_{i=1} x_i y_i=\\delta_{xy}$ | **Orthonormality** $\\\\ \\langle \\phi_i \\mid \\phi_j \\rangle = \\int^{+\\infty}_{-\\infty} \\phi_i(x) \\phi_j(x)dx=\\delta_{ij}$ |\n",
-    "| **Linear superposition**  $\\\\ \\mid A \\rangle = A_x \\mid x\\rangle+A_y\\mid y\\rangle$ | **Linear superposition** $\\\\ \\mid f\\rangle = c_1 \\mid\\phi_1\\rangle+c_2\\mid\\phi_2\\rangle$ |\n",
-    "| **Projections**  $\\\\ \\langle e_x\\mid A\\rangle=A_x \\langle x\\mid x \\rangle +A_y \\langle x\\mid y \\rangle=A_x  $ | **Projections** $\\\\ \\langle \\phi_1\\mid \\Psi\\rangle=c_1 \\langle \\Psi \\mid\\phi_1 \\rangle +c_2 \\langle \\Psi \\mid\\phi_2 \\rangle=c_1$ |\n",
-    "\n",
-    "- In the first column we decompose a vectors in terms of two orthogonal components $A_i$ or projections of vector $A$ along the orthonormal vectors $x$ and $y$.  In the second column similiar decomposition where the dot product, due to infinite dimension, is given by an integral!"
    ]
   }
  ],
