--- a/ch03/fourier_transform.ipynb
+++ b/ch03/fourier_transform.ipynb
@@ -714,6 +714,51 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Free Electron and Delta Function Duality\n",
+    "\n",
+    "- A general wavefunction can be expanded as a superposition of momentum eigenstates:\n",
+    "\n",
+    "$$\n",
+    "\\psi(x) = \\frac{1}{\\sqrt{2\\pi}} \\int \\phi(k), e^{ikx}, dk,\n",
+    "$$\n",
+    "\n",
+    "where ( $e^{ikx}$ ) are eigenfunctions of the free-particle Hamiltonian and form a complete orthogonal basis.\n",
+    "The coefficient ( $\\phi(k)$ ) gives the amplitude of each momentum mode.\n",
+    "\n",
+    "* For a **localized particle**, $ \\phi(k)$ is broad — many momenta combine to form a narrow spatial peak.\n",
+    "* For a **free electron** with definite momentum $k_0$,\n",
+    "\n",
+    "  $$\n",
+    "  \\phi(k) = \\delta(k - k_0),\n",
+    "  $$\n",
+    "\n",
+    "  so that\n",
+    "\n",
+    "  $$\n",
+    "  \\psi(x) = e^{ik_0x}.\n",
+    "  $$\n",
+    "\n",
+    "\n",
+    "  * Conversely, for a **localized particle** at $x_0$:\n",
+    "\n",
+    "  $$\n",
+    "  \\psi(x) = \\delta(x - x_0) ;\\Rightarrow; \\phi(k) = \\frac{1}{\\sqrt{2\\pi}} e^{-ikx_0}.\n",
+    "  $$\n",
+    "\n",
+    "\n",
+    "- Thus, a free electron (plane wave) is a *single momentum component* spread uniformly in space, while a localized delta function in space is an *infinite superposition* of plane waves.\n",
+    "This Fourier duality expresses the position–momentum uncertainty relationship.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
