--- a/_sources/ch03/fourier_transform.ipynb
+++ b/_sources/ch03/fourier_transform.ipynb
@@ -727,8 +727,8 @@
     "\\psi(x) = \\frac{1}{\\sqrt{2\\pi}} \\int \\phi(k), e^{ikx}, dk,\n",
     "$$\n",
     "\n",
-    "where ( $e^{ikx}$ ) are eigenfunctions of the free-particle Hamiltonian and form a complete orthogonal basis.\n",
-    "The coefficient ( $\\phi(k)$ ) gives the amplitude of each momentum mode.\n",
+    "where $e^{ikx}$  are eigenfunctions of the free-particle Hamiltonian and form a complete orthogonal basis.\n",
+    "The coefficient $\\phi(k)$ gives the amplitude of each momentum mode.\n",
     "\n",
     "* For a **localized particle**, $ \\phi(k)$ is broad — many momenta combine to form a narrow spatial peak.\n",
     "* For a **free electron** with definite momentum $k_0$,\n",
@@ -754,11 +754,6 @@
     "- Thus, a free electron (plane wave) is a *single momentum component* spread uniformly in space, while a localized delta function in space is an *infinite superposition* of plane waves.\n",
     "This Fourier duality expresses the position–momentum uncertainty relationship.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
