--- a/_sources/ch04/note03.ipynb
+++ b/_sources/ch04/note03.ipynb
@@ -255,7 +255,14 @@
     "\n",
     "**Conseqeuences for evaluating integrals**\n",
     "\n",
-    "- Integral of an odd function from $-a$ to $a$ ($a$ may be $\\infty$) is zero.\n"
+    "- Integral of an odd function from $-a$ to $a$ ($a$ may be $\\infty$) is zero.\n",
+    "\n",
+    "$$\\langle x_n \\rangle = \\langle n|x |\\rangle =0$$\n",
+    "\n",
+    "- This holds for all $n$ values\n",
+    "\n",
+    "\n",
+    "$$\\langle x^2_n\\rangle \\neq 0$$"
    ]
   },
   {
