--- a/_sources/ch04/note02.ipynb
+++ b/_sources/ch04/note02.ipynb
@@ -52,7 +52,9 @@
     "\n",
     "\n",
     "\n",
-    "$$F=-kx$$\n",
+    "$$\n",
+    "F=-kx\n",
+    "$$\n",
     "\n",
     "- This is **Hooke's law**, where minus sign indicates that the direction of force is always towards restoring equilibrium location. \n",
     "- The constant k characterizes stiffness of the spring and is called **spring constant.**"
@@ -108,7 +110,6 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.animation import FuncAnimation\n",
     "from IPython.display import HTML\n",
-    "from pathlib import Path\n",
     "\n",
     "def sho_anim(m, k=1.0, A=0.9, phi=0.0, duration=4.0, fps=30):\n",
     "    ω = np.sqrt(k/m)\n",
@@ -156,7 +157,7 @@
     "anim2 = sho_anim(m=10.0, duration=10.0)  # slower oscillation\n",
     "\n",
     "# Inline display in Jupyter / Jupyter Book\n",
-    "plt.close(fig)  # Prevents static display of the last frame\n",
+    "plt.close()  # Prevents static display of the last frame\n",
     "HTML(anim1.to_jshtml() + \"<br><hr><br>\" + anim2.to_jshtml())\n",
     "\n"
    ]
@@ -167,15 +168,17 @@
    "source": [
     "### Energy of the harmonic oscillator\n",
     "\n",
-    "- In classical mechanics the force and the potential energy of a conservative system are related via the formula:\n",
+    "- In classical mechanics when we have a conservative system (no frictions, energy conserved) the **force is a gradient of a potential energy**\n",
     "\n",
-    "$$F = - \\frac{\\partial V(x)}{\\partial x} $$\n",
+    "$$F = - \\frac{\\partial V(x)}{\\partial x}$$\n",
     "\n",
-    "- This means the steeper the potential the higher the force and minus sign indicates that force is restoring the equilibrium position. The potential energy can be obtained by integrating:\n",
+    "- This means the steeper the potential the higher the force and minus sign indicates that force is restoring system to its equilibrium position. \n",
+    "\n",
+    "- The potential energy can be obtained by integrating:\n",
     "\n",
     "$$ V(x)= - \\int F dx = - \\int (-kx) dx =\\frac{kx^2}{2}+C$$\n",
     "\n",
-    "- Thus the potential energy for a simple harmoncin oscillator is a parabolic function of displacement. It is  convenient  to set $C=0$ and measure potential energy relative to equilibrium state $V(x=0)=0$ \n",
+    "- Thus the potential energy for a simple harmonic oscillator is a parabolic function of displacement. It is  convenient  to set $C=0$ and measure potential energy relative to equilibrium state $V(x=0)=0$ \n",
     "\n",
     "- The total energy consisting of kinetic and potential enregies will be used to obtain Schordinger equation.\n",
     "\n",
@@ -200,6 +203,15 @@
     ":::{figure-md} markdown-fig\n",
     "<img src=\"images/osc-2.jpeg\" alt=\"compton\" class=\"bg-primary mb-1\" width=\"300px\">\n",
     "\n",
+    "\n",
+    "- We can reduce the two body probelm of vibrating atoms to a one body problem of one atom with an effective reduced mass:  $\\mu=\\frac{1}{m_1}+\\frac{1}{m_2}=\\frac{m_1 m_2}{m_1+m_2}$\n",
+    "\n",
+    "$$\\ddot{x}=\\ddot{x_2} - \\ddot{x_1} =-\\Big(\\frac{1}{m_1}+\\frac{1}{m_2} \\Big)kx=-\\frac{k}{\\mu}x$$\n",
+    "\n",
+    "\n",
+    ":::{admonition} **Derivation**\n",
+    ":class: tip, dropdown\n",
+    "\n",
     "Equations of motion for diatomic molecule modeled as beads bound by a spring are:\n",
     "\n",
     "$$F_1=m_1 \\ddot{x_1}=k(x_2-x_1-l_0)$$\n",
@@ -223,11 +235,11 @@
     "\n",
     "- Next by taking difference between coordinates $\\ddot{x_2}=-\\frac{k}{m_2}x_2$ and  $\\ddot{x_1}=\\frac{k}{m_1}x_1$we expres  the equations of motion in terms of relative distance\n",
     "\n",
+    "\n",
     "$$\\ddot{x}=\\ddot{x_2} - \\ddot{x_1} =-\\Big(\\frac{1}{m_1}+\\frac{1}{m_2} \\Big)kx=-\\frac{k}{\\mu}x$$\n",
     "\n",
     "- This equation looks identical to the probem of bead anchored to wall with a spring. We have thus managed to reduce the two body probelm to a one modey problem by replacing masses of bodies with a reduced mass:  $\\mu=\\frac{1}{m_1}+\\frac{1}{m_2}=\\frac{m_1 m_2}{m_1+m_2}$\n",
-    "\n",
-    "\n",
+    ":::\n",
     "\n",
     "### Beads and springs model of molecules\n",
     "\n",
