--- a/_sources/ch04/note03.ipynb
+++ b/_sources/ch04/note03.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "$${H =  \\frac{1}{2\\mu}p_x^2 + \\frac{1}{2}kx^2}$$\n",
     "\n",
-    "- The [quantum mechanicalm harmonic oscillator](http://en.wikipedia.org/wiki/Quantum_harmonic_oscillator) is obtained by replacing the classical position and momentum by the corresponding quantum mechanical operators\n",
+    "- The quatnum harmonic oscillatoris obtained by replacing the classical position and momentum by the corresponding quantum mechanical operators\n",
     "\n",
     "$${\\hat{H} = -\\frac{\\hbar^2}{2\\mu}\\frac{d^2}{dx^2} + \\frac{1}{2}kx^2 }$$\n",
     "\n",
@@ -30,9 +30,9 @@
     "$$\\hat{H}\\psi_v(x) = E_v \\psi_v(x) $$\n",
     "\n",
     "**Parameters of the Hamiltonian**\n",
-    "- $k=\\frac{\\mu}{\\omega}$ Spring constant \n",
-    "- Angular frequency of vibrations $\\omega=2\\pi \\nu$ \n",
-    "- $\\nu$,  Frequency (Hz; do not confuse this with quantum number $v$) "
+    "- $k=\\frac{\\mu}{\\omega}$ Spring constant, measures stiffness of the spring\n",
+    "- Angular frequency of vibrations $\\omega=2\\pi \\nu$ of atoms  \n",
+    "- $\\nu$,  Frequency (Hz; do not confuse this with quantum number $v$) of vibrating atoms "
    ]
   },
   {
@@ -257,12 +257,32 @@
     "\n",
     "- Integral of an odd function from $-a$ to $a$ ($a$ may be $\\infty$) is zero.\n",
     "\n",
-    "$$\\langle x_n \\rangle = \\langle n|x |\\rangle =0$$\n",
+    "$$\\langle x_n \\rangle = \\langle n|x |n\\rangle =0$$\n",
     "\n",
     "- This holds for all $n$ values\n",
     "\n",
+    "$$\\langle x^2_n\\rangle \\neq 0$$\n",
     "\n",
-    "$$\\langle x^2_n\\rangle \\neq 0$$"
+    "- When you take a derivative of odd (even) function you make it even (odd). E.g take derivative of odd function $x^3$ we get $3x^2$ an even function. \n",
+    "- As a result we can set the following integral to be zero:\n",
+    "\n",
+    "$$\n",
+    "\\langle p \\rangle  = \\langle n | \\hat{p_x}|n\\rangle = 0\n",
+    "$$\n",
+    "\n",
+    "- And just like for x if we have two derivatives the the expression of expectation always returns an even function\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\langle p^2 \\rangle  = \\langle n | \\hat{p^2_x}|n\\rangle \\neq 0\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Visual illustration of orthogonality of eigenfunctions for quantum harmonic oscillator**"
    ]
   },
   {
@@ -324,24 +344,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interpreting solutions\n",
+    "### Tunneling and quantum to classical behaviour \n",
     "\n",
     "- The tails of the wavefunctions penetrate into the potential barrier deeper than the classical physics would allow. This phenomenon is called **tunneling.**\n",
     "- As we excite the system to higher levels probability distribution accumulates near edges thereby approaching classical prediction. "
