--- a/_sources/ch04/note03B.ipynb
+++ b/_sources/ch04/note03B.ipynb
@@ -34,8 +34,8 @@
     "\n",
     "- **The vibrational quantum number**  $v=0,1,2,...$ \n",
     "- **Reduced mass of the diatomic molecule** $\\mu$. \n",
-    "- **Spring constant k**\n",
-    "- **$\\tilde{\\nu}$ frequency of photon equal to vibrational frequency both expressed in $cm^{-1}$ units.**\n",
+    "- **Spring constant k** measures strength of bonds\n",
+    "- **$\\tilde{\\nu}$ frequency of photon (equal to freq of mol vibrations) $cm^{-1}$ units.**\n",
     ":::\n",
     "\n",
     "- Note that $v$ and $\\nu$ look very similar but have different meaning!  \n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-input"
@@ -317,7 +317,7 @@
     "X.make_rgrid()\n",
     "X.V = X.Vmorse(X.r)\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize=(11, 11)))\n",
     "X.plot_V(ax, color='k')\n",
     "\n",
     "X.draw_Elines(range(X.vmax), ax)\n",
@@ -450,11 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculating number of modes\n",
-    "\n",
-    "- The degrees of vibrational modes for linear molecules can be calculated using the formula:\n",
-    "\n",
-    ":::{admonition}\n",
+    ":::{admonition} **Vibrational degrees of freedom in molecules **\n",
     ":class: important\n",
     "\n",
     "- **Linear** Molecules with N atoms:\n",
@@ -481,7 +477,7 @@
     "\n",
     "- Not all diatomic molecules have vibrational absorption spectrum. To see this, we have to calculate the electric dipole transition moment. We will learn more about whu To proceed, we expand $\\mu_0^{(e)}$ in a Taylor series about $R = R_e$:\n",
     "\n",
-    "To express \\(\\mu_z(x)\\) as a Taylor expansion in terms of \\(x = R - R_e\\), we rewrite the dipole moment expansion and matrix elements as follows:\n",
+    "To express $\\mu_z(x)$ as a Taylor expansion in terms of $x = R - R_e$, we rewrite the dipole moment expansion and matrix elements as follows:\n",
     "\n",
     "#### Dipole Moment Expansion in Terms of $x$\n",
     "\n",
