--- a/ch04/note03B.ipynb
+++ b/ch04/note03B.ipynb
@@ -19,9 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Harmonic Oscillator approximation\n",
-    "\n",
-    "- First let us write harmonic oscillator energies in a format used for spectroscopic analysis. This means converting to wavenumber units $\\tilde{\\nu}=\\frac{1}{\\lambda}$:\n",
+    "### Vibrational Spectroscopy with Harmonic Oscillator\n",
     "\n",
     ":::{admonition} **Harmonic oscillator and spectroscopuc units**\n",
     ":class: important\n",
@@ -32,13 +30,13 @@
     "\n",
     "$$\\tilde{\\nu} = \\frac{1}{2\\pi c}\\sqrt{\\frac{k}{\\mu}}$$\n",
     "\n",
-    "- **The vibrational quantum number**  $v=0,1,2,...$ \n",
-    "- **Reduced mass of the diatomic molecule** $\\mu$. \n",
-    "- **Spring constant k** measures strength of bonds\n",
+    "- **The vibrational quantum number:**  $v=0,1,2,...$ \n",
+    "- **Reduced mass of the diatomic molecule:** $\\mu$. \n",
+    "- **Spring constant $k$:** measures strength of bonds\n",
     "- **$\\tilde{\\nu}$ frequency of photon (equal to freq of mol vibrations) $cm^{-1}$ units.**\n",
     ":::\n",
     "\n",
-    "- Note that $v$ and $\\nu$ look very similar but have different meaning!  \n",
+    "- Note that symbols $v$ (quantum number) and $\\nu$ (vibrational frequency) look very similar but have different meanings!  \n",
     "- A typical value for vibrational frequency would be around  $500 - 4000cm^{-1}$. Small values are associated with weak bonds whereas strong bonds have larger vibrational frequencies."
    ]
   },
@@ -334,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unharmonic oscillator\n",
+    "### Anharmonic oscillator\n",
     "\n",
     "We can account for the deviation from the harmonic behavior by adding higher order polynomial terms $\\tilde{E}_v$. Addition of new terms allow for eventual dissociation to happen when molecule is excited to high vibrational energy states. \n",
     "\n",
@@ -470,38 +468,68 @@
    "source": [
     "### Selection rules\n",
     "\n",
-    "- Selection rules in spectroscopy are fundamental principles that dictate whether a transition is allowed or forbidden during the absorption or emission of electromagnetic radiation, such as infrared (IR) or Raman spectroscopy. The origins of these rules lie in the quantum mechanical description of molecular vibrations and the interactions of molecules with electromagnetic radiation.\n",
+    "- Selection rules in spectroscopy are fundamental principles that dictate whether a transition is allowed or forbidden during the absorption or emission of electromagnetic radiation, such as infrared (IR) or Raman spectroscopy. The origins of these rules lie in the quantum mechanical description of molecular vibrations and the interactions of molecules with electromagnetic radiation. Meaning is that the light can induce coupling between the initial and final quantum states\n",
     "\n",
     "- Molecular symmetry plays a crucial role in determining the allowed transitions.\n",
     "Symmetry considerations, especially in molecules, come from group theory, which helps in predicting whether a certain vibrational mode will be IR or Raman active.\n",
     "\n",
-    "- Not all diatomic molecules have vibrational absorption spectrum. To see this, we have to calculate the electric dipole transition moment. We will learn more about whu To proceed, we expand $\\mu_0^{(e)}$ in a Taylor series about $R = R_e$:\n",
+    "- Not all diatomic molecules have vibrational absorption spectrum becasue of **the selection rules**\n",
     "\n",
-    "To express $\\mu_z(x)$ as a Taylor expansion in terms of $x = R - R_e$, we rewrite the dipole moment expansion and matrix elements as follows:\n",
+    "Here’s a cleaner, more structured and pedagogically clear version of your Jupyter Book section — keeping it concise and conceptually aligned with how you teach spectroscopy:\n",
     "\n",
-    "#### Dipole Moment Expansion in Terms of $x$\n",
+    "---\n",
+    "\n",
+    "### Transition Dipole Moment\n",
+    "\n",
+    "In spectroscopy, **allowed transitions** are those with a **non-zero transition dipole moment** between the initial and final states.\n",
+    "\n",
+    "Mathematically, the molecular dipole moment can be expanded around its equilibrium geometry ( R_e ):\n",
     "\n",
     "$$\n",
-    "\\mu_z(x) = \\mu_e + \\left( \\frac{\\partial \\mu}{\\partial R} \\right)_{R = R_e} x + \\frac{1}{2} \\left( \\frac{\\partial^2 \\mu}{\\partial R^2} \\right)_{R = R_e} x^2 + \\dots\n",
-    "$$\n",
+    "\\mu_z(R) = \\mu_e\n",
+    "\n",
+    "\\cdot \\left( \\frac{\\partial \\mu}{\\partial R} \\right)_{R_e} (R - R_e)\n",
+    "\\cdot \\frac{1}{2} \\left( \\frac{\\partial^2 \\mu}{\\partial R^2} \\right)_{R_e} (R - R_e)^2 + \\dots\n",
+    "  $$\n",
+    "\n",
+    "Using $x = R - R_e$ for convenience, the transition dipole matrix element between vibrational states $|v\\rangle$ and $|v'\\rangle$ becomes:\n",
     "\n",
     "$$\n",
-    "\\langle v | \\mu_z | v' \\rangle = \\mu_e \\langle v | v' \\rangle + \\left( \\frac{\\partial \\mu}{\\partial R} \\right)_{R = R_e} \\langle v | x | v' \\rangle + \\frac{1}{2} \\left( \\frac{\\partial^2 \\mu}{\\partial R^2} \\right)_{R = R_e} \\langle v | x^2 | v' \\rangle + \\dots\n",
+    "\\langle v | \\mu_z | v' \\rangle\n",
+    "= \\mu_e \\langle v | v' \\rangle\n",
+    "\n",
+    "\\cdot \\left( \\frac{\\partial \\mu}{\\partial R} \\right)_{R_e} \\langle v | x | v' \\rangle\n",
+    "\\cdot \\frac{1}{2} \\left( \\frac{\\partial^2 \\mu}{\\partial R^2} \\right)_{R_e} \\langle v | x^2 | v' \\rangle\n",
+    "\\cdot \\dots\n",
+    "  $$\n",
+    "\n",
+    "Each term corresponds to an **expectation value** of powers of ( x ) in the vibrational basis.\n",
+    "We can interpret these terms as follows:\n",
+    "\n",
+    "* **First term:** $\\mu_e \\langle v | v' \\rangle = 0 $ for $v \\neq v'$ because the vibrational wavefunctions are orthogonal.\n",
+    "* **Second term:** The term involving $\\langle v | x | v' \\rangle$ can be nonzero **only if** the dipole moment changes with internuclear distance, i.e., $\\frac{\\partial \\mu}{\\partial R} \\neq 0$.\n",
+    "* **Higher-order terms:** Usually small, but can contribute to overtones ($\\Delta v = 2, 3, \\dots $) when $\\mu(R)$  is strongly anharmonic.\n",
+    "\n",
+    ":::{admonition} **Selection Rule**\n",
+    ":class: important \n",
+    "\n",
+    "\n",
+    "A **vibrational transition is allowed** only if the molecular dipole moment **changes with the bond length**:\n",
+    "\n",
+    "$$\n",
+    "\\left( \\frac{\\partial \\mu}{\\partial R} \\right)_{R_e} \\neq 0.\n",
     "$$\n",
     "\n",
-    "- Here, each term in $\\langle v | \\dots | v' \\rangle$ corresponds to the expectation values of the operators involving $x=R - R_e$ in the vibrational states $ | v \\rangle $ and $ | v' \\rangle $.\n",
-    "\n",
-    "- The first term above is zero since the vibrational eigenfunctions are orthogonal. The second term is nonzero if the dipole moment depends on the internuclear distance $R$. Therefore we conclude that the selection rule for pure vibrational transition is that the dipole moment must change as a function of $R$. \n",
-    "\n",
-    ":::{admonition} **Selection Rules for Harmonic Oscillator**\n",
-    ":class: important\n",
     "\n",
     "$$P_{v\\rightarrow v'} \\sim \\langle v | x | v' \\rangle $$\n",
     "\n",
     "$$\\Delta v = \\pm 1$$\n",
     "\n",
     "- $P_{v\\rightarrow v'}$ probability of making transition from $v$ to $v'$ vibrational energy level\n",
-    ":::"
+    "\n",
+    ":::\n",
+    "\n",
+    "- This is why homonuclear diatomic molecules (like $\\mathrm{N_2}$, $\\mathrm{O_2} $)—whose dipole moment does not vary with $R$—do **not** show infrared absorption, while heteronuclear molecules (like $\\mathrm{CO}$, ( $\\mathrm{HCl}$) do."
    ]
   },
   {
